.metadata/.plugins/org.eclipse.cdt.ui/I2C1_2.build.log
16:48:25 **** Incremental Build of configuration Debug for project I2C1_2 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:44:1: error: unknown type name 'UART_HandleTypeDef'; did you mean 'I2C_HandleTypeDef'?
   44 | UART_HandleTypeDef huart2;
      | ^~~~~~~~~~~~~~~~~~
      | I2C_HandleTypeDef
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:139:8: warning: implicit declaration of function 'sprintf' [-Wimplicit-function-declaration]
  139 |        sprintf((char*)buf,
      |        ^~~~~~~
../Core/Src/main.c:139:8: warning: incompatible implicit declaration of built-in function 'sprintf'
../Core/Src/main.c:22:1: note: include '<stdio.h>' or provide a declaration of 'sprintf'
   21 | #include <string.h>
  +++ |+#include <stdio.h>
   22 | /* Private includes ----------------------------------------------------------*/
../Core/Src/main.c:148:3: warning: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
  148 |   HAL_UART_Transmit(&huart2, buf, strlen((char*)buf), HAL_MAX_DELAY);
      |   ^~~~~~~~~~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:53:13: warning: 'MX_USART2_UART_Init' used but never defined
   53 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

16:48:25 Build Failed. 2 errors, 4 warnings. (took 279ms)

